# ComputacaoGrafica

./: .gitignore  CMakeLists.txt
Atividade 00 - 02.10/: README.md  main  main.cc
Atividade 01 - 02.10/: MakeImage.cc  MakeImage.h  Makefile  README.md  image.ppm  main  main.cc  result-gradiente.ppm  result-triangulo.ppm
Atividade 01 - 02.10/Documentação Doxygen/html/: _make_image_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_make_image-members.html  class_make_image.html  classes.html  files.html  functions.html  globals_func.html  index.html
Atividade 01 - 02.10/Documentação Doxygen/latex/: annotated.tex  class_make_image.tex  dir_ff2df25e3a26cfa1eefa650eab802837.tex  md__computacao_grafica_2_atividade_0101_01-_0102_810_2_r_e_a_d_m_e.tex  refman.tex
Atividade 01 - 02.10/Documentação Doxygen/rtf/: dir_31bc30938195c8a6f65d31aa64bb76c1.rtf
Atividade 02 - 09.10/: CMakeLists.txt  README.md  color.h  main.cc  mat2.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
Atividade 02 - 09.10/Documentação Doxygen/html/: classmat2-members.html  classmat2.html  classmat3-members.html  classmat3.html  classmat4-members.html  classmat4.html  classvec3-members.html  classvec3.html  classvec4.html  dir_ff2df25e3a26cfa1eefa650eab802837.html  functions_vars.html  globals.html  index.html  mat2_8h_source.html  mat4_8h.html  menudata.js  pages.html  vec2_8h_source.html  vec4_8h.html  vec4_8h_source.html
Atividade 02 - 09.10/docs/html/: _atv2-_tests_8cc.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classmat2-members.html  classmat2.html  classmat3-members.html  classmat3.html  classmat4-members.html  classmat4.html  classvec2.html  (+32 more)
Atividade 02 - 09.10/tests/: Atv2-Tests.cc  CMakeLists.txt
Atividade 03 - 16.10/: CMakeLists.txt  README.md
Atividade 03 - 16.10/docs/html/: _atv3-_tests_8cc.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classprocess_object-members.html  classprocess_object.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  md__r_e_a_d_m_e.html  pages.html  process_object_8h.html  process_object_8h_source.html  struct_face-members.html  struct_face.html  struct_normal-members.html  struct_normal.html  struct_texture_coordinate-members.html  struct_texture_coordinate.html  struct_vertex-members.html  struct_vertex.html
Atividade 03 - 16.10/docs/html/search/: all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_e.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js
Atividade 03 - 16.10/headers/: processObject.h
Atividade 03 - 16.10/sources/: processObject.h
Atividade 03 - 16.10/tests/: Atv3-Tests.cc  CMakeLists.txt
Atividade 04 - 30.10/: README.md
Atividade 04 - 30.10/headers/: ray.h
Atividade 04 - 30.10/images/: obj.ppm  triangle.ppm
Atividade 04 - 30.10/src/: main.cc
Atividade 05 - 18.12/: README.md
Atividade 05 - 18.12/docs/: Doxyfile
Atividade 05 - 18.12/headers/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  rtweekend.h  sphere.h
Atividade 05 - 18.12/src/: Makefile  main.cc
Atividade 06 - 19.12/: README  README.md
Atividade 06 - 19.12/docs/: Doxyfile
Atividade 06 - 19.12/headers/: material.h
Atividade 06 - 19.12/src/: main.cc
Atividade00/: README.md
Atividade01/: Makefile  README.md  result-anel.ppm
Atividade02/: CMakeLists.txt  README.md
Atividade02/Documentação Doxygen/html/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classvec2-members.html  classvec2.html  classvec4-members.html  color_8h.html  color_8h_source.html  dir_3638d6947b3500e46f87b0aaf546c086.html  files.html  functions.html  functions_func.html  globals_func.html  globals_type.html  main_8cc.html  mat2_8h.html  mat3_8h.html  mat3_8h_source.html  mat4_8h_source.html  md__computacao_grafica_2_atividade_0102_01-_0109_810_2_r_e_a_d_m_e.html  todo.html  vec2_8h.html  vec3_8h.html  vec3_8h_source.html
Atividade02/Documentação Doxygen/html/search/: all_10.js  all_11.js  all_4.js  all_a.js  all_e.js  all_f.js  files_1.js  functions_0.js  functions_1.js  functions_6.js  functions_7.js  pages_0.js  pages_6.js  typedefs_1.js
Atividade02/headers/: mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
Atividade02/src/: main.cc
Atividade02/tests/: Atividade03-Tests.cc  CMakeLists.txt
Atividade03/sources/: main.cc
test/: CMakeLists.txt  ExampleTests.cc
(+173 files in other folders)
